--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/principalStyle.css">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./styles/principalStyle.css">
     <title>AprendeX</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
         
             <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/assets/logo.png" alt="AprendeX" width="200" height="50" class="d-inline-block align-text-top">
+                <img src="./assets/logo.png" alt="AprendeX" width="200" height="50" class="d-inline-block align-text-top">
             </a>
             </div>
             
@@ -36,7 +36,7 @@
 
     <div class="d-flex recuadro-celeste">
         <div class="info-app">
-            <img src="/assets/profesora.png"  alt="">
+            <img src="./assets/profesora.png"  alt="">
             <div class="texto-inicio" >
                 <h2>Mejores asesorías, mejores metodologias,mejores resultados</h2>
                 <p>La aplicación que mejorará tu rendimiento académico a través de asesorías personalizadas con profesores capacitados</p>
