--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/principalStyle.css">
     <title>AprenDX</title>
+
 </head>
 <body>
     <nav class="navbar navbar-light ">
         
             <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="./assets/logo.png" alt="AprenDX" width="200" height="50" class="d-inline-block align-text-top">
+                <img src="./assets/logo.png" alt="AprenDX" width="250" height="50" class="d-inline-block align-text-top imgLogo">
             </a>
             </div>
             
@@ -43,7 +44,7 @@
             </div>
             <div class="botones-registro d-flex flex-column">
                 <h4>Crea una cuenta gratis</h4>
-                <button>¡Únete como estudiante!</button>
+                <button> <a href="./registro_estudiante.html">¡Únete como estudiante!</a> </button>
                 <button>¡Únete como profesor!</button>
             </div>
         </div>
