--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
-            <li class="list-group-item"><a href="#">¿Quiénes somos?</a></li>
+            <li class="list-group-item"><a href="#quienes-somos">¿Quiénes somos?</a></li>
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
@@ -59,6 +59,7 @@
             </div>
         </div>
     </div>
+    <!--Que ofrecemos-->
     <div class="d-flex que-ofrecemos flex-column" name="que-ofrecemos" id="que-ofrecemos">
         <div class="d-flex titulo-que-ofrecemos">
             <h3>¿QUÉ OFRECEMOS?</h3>
@@ -89,6 +90,24 @@
             </div>
         </div>
     </div>
+
+    <!--Quienes somos-->
+    <div class="d-flex quienes-somos" name= "quienes-somos" id="quienes-somos">
+        <div class="d-flex flex-column quienes-somos-item">
+            <h3>¿QUIÉNES SOMOS?</h3>
+            <p>Somos una startup conformada por estudiantes pertenecientes a la UPC. Tenemos como objetivo mejorar el nivel educativo de los demás estudiantes.</p>
+        </div>
+        <div class="linea-quienes"></div>
+        <div class="d-flex flex-column quienes-somos-item">
+            <h3>¿POR QUÉ ELEGIRNOS?</h3>
+            <ul>
+                <li>Tenemos nuestra propia tecnología</li>
+                <li>Mejor comunicación con el profesor</li>
+                <li>Mayor exigencia, para mejores resultados</li>
+            </ul>
+        </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
