--- a/index.html
+++ b/index.html
@@ -77,19 +77,19 @@
             <div class="d-flex linea-caracteristica"></div>
             <div class="d-flex flex-column caracteristicas-items" >
                 <img src="./assets/Vector.png" alt="comodidad">
-                <h3>Disponibilidad</h3>
+                <h3>Comodidad</h3>
                 <p><b>Todas</b> las clases son <b>virtuales</b>, así que puedes ingresar a la asesoría desde <b>cualquier</b> lugar, siempre y cuando tengas <b>conexión</b> a internet</p>
             </div>
             <div class="d-flex linea-caracteristica"></div>
             <div class="d-flex flex-column caracteristicas-items" >
                 <img src="./assets/recorder.png" alt="grabaciones">
-                <h3>Disponibilidad</h3>
+                <h3>Grabaciones</h3>
                 <p>Las asesorías <b>siempre</b> quedan grabadas y se pueden revisar las veces que se desee. Además, la barra de progreso del vídeo está está <b>seccionada</b>, para realizar una búsqueda más <b>rápida</b> y <b>sencilla</b>.</p>
             </div>
             <div class="d-flex linea-caracteristica"></div>
             <div class="d-flex flex-column caracteristicas-items" >
                 <img src="./assets/chat.png" alt="foros">
-                <h3>Disponibilidad</h3>
+                <h3>Foros</h3>
                 <p>Te damos la posibilidad de <b>publicar</b> en nuestros <b>foros</b> todas las <b>consultas</b> sobre los cursos que quieras. Otros estudiantes o docentes podrán <b>resolver</b> tus <b>dudas</b>.</p>
             </div>
         </div>
