--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
     <!--Footer-->
     <footer class="footer d-flex flex-column">
         <div class="footer-info d-flex">
-            <div class="footer-item">
+            <div class="footer-item contactenos">
                 <h5>Contáctanos</h5>
                 <div class="linea-footer"></div>
                 <p>(+51)999888777</p>
                 <p>(+51)987654321</p>
                 <p>(+51)981234567</p>
             </div>
-            <div class="footer-item">
+            <div class="footer-item siguenos">
                 <h5>Síguenos</h5>
                 <div class="linea-footer"></div>
                 <div class="d-flex contenedor-iconos">
@@ -146,16 +146,19 @@
 
                 </div>
             </div>
-            <div class="footer-item">
+            <div class="footer-item descargalo">
                 <h5>Descarga AprenDX</h5>
                 <div class="linea-footer"></div>
-                <div class="d-flex avalible-1">
-                    <img src="./assets/AppStore-1.png" alt="Disponible en playstore">
-                    <img src="./assets/GooglePlay-1.png" alt="Disponible en google play">
+                <div class="apps d-flex">
+                    <div class="d-flex avalible-1">
+                        <img src="./assets/AppStore-1.png" alt="Disponible en playstore">
+                        <img src="./assets/GooglePlay-1.png" alt="Disponible en google play">
+                    </div>
+                    <div class="d-flex avalible-2">
+                        <img src="./assets/desktop.png" alt="Disponible en dsktop">
+                    </div>
                 </div>
-                <div class="d-flex avalible-2">
-                    <img src="./assets/desktop.png" alt="Disponible en dsktop">
-                </div>
+                
             </div>
         </div>
         <p>© Copyright 2021 AprenDX. Todos los derechos reservados.</p>
