--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             </div>
             <div class="botones-registro d-flex flex-column">
                 <h4>Crea una cuenta gratis</h4>
-                <button> <a href="./registro_estudiante.html">¡Únete como estudiante!</a> </button>
-                <button>¡Únete como profesor!</button>
+                <button> <a href="./views/registro_estudiante.html">¡Únete como estudiante!</a> </button>
+                <button><a href="./views/registro_profesor.html"></a>¡Únete como profesor!</button>
             </div>
         </div>
     </div>
