--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="La ayuda segura para tu universidad. Clases y refuerzos online"/>
+    <meta name="keywords" content="aprendizaje, online, asesoria, universidad, clases"/>
+    <meta name="robots" content="follow"/>
+    <meta name="robots" content="index"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./styles/principalStyle.css">
