another update zzzzz

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="botones-registro d-flex flex-column">
                 <h4>Crea una cuenta gratis</h4>
                 <button> <a href="./views/registro_estudiante.html">¡Únete como estudiante!</a> </button>
-                <button><a href="./views/registro_profesor.html"></a>¡Únete como profesor!</button>
+                <button> <a href="./views/registro_profesor.html">¡Únete como profesor!</a></button>
             </div>
         </div>
     </div>
@@ -114,7 +114,7 @@
     <div class="d-flex quienes-somos" name= "quienes-somos" id="quienes-somos">
         <div class="d-flex flex-column quienes-somos-item">
             <h3>¿QUIÉNES SOMOS?</h3>
-            <p>Somos una startup conformada por estudiantes pertenecientes a la UPC. Tenemos como objetivo mejorar el nivel educativo de los demás estudiantes.</p>
+            <p>Somos AprenDTeam, una startup conformada por estudiantes pertenecientes a la UPC. Tenemos como objetivo mejorar el nivel educativo de los demás estudiantes.</p>
         </div>
         <div class="linea-quienes"></div>
         <div class="d-flex flex-column quienes-somos-item">
