espero que sea lo ultimo xd

--- a/index.html
+++ b/index.html
@@ -31,37 +31,39 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KG54V5J"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <!--Navbar-->
     <nav class="navbar navbar-light ">
         
-            <div class="container-fluid">
+        <div class="container-fluid loguito">
+            <button class="button-bar">
+                <i class="fas fa-bars"></i>
+            </button>
             <a class="navbar-brand" href="#">
                 <img src="./assets/logo.png" alt="AprenDX" width="250" height="50" class="d-inline-block align-text-top imgLogo">
             </a>
-            </div>
-            
+        </div>
     </nav>
-    <div class="d-flex p-2 bd-highlight justify-content-center barra-navegacion">
+    <!--Navbar-->
+    <nav class="d-flex p-2 bd-highlight justify-content-center barra-navegacion">
         <ul class="list-group list-group-horizontal">
-            <li class="list-group-item"> <a href="#">Inicio</a> </li>
+            <li class="list-group-item uwu"> <a href="#">Inicio</a> </li>
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
-            <li class="list-group-item"><a href="#que-ofrecemos">¿Qué ofrecemos?</a></li>
+            <li class="list-group-item uwu"><a href="#que-ofrecemos">¿Qué ofrecemos?</a></li>
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
-            <li class="list-group-item"><a href="#quienes-somos">¿Quiénes somos?</a></li>
+            <li class="list-group-item uwu"><a href="#quienes-somos">¿Quiénes somos?</a></li>
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
-            <li class="list-group-item"><a href="#">Asociación</a></li>
+            <li class="list-group-item uwu"><a href="#institucion-asociada">Asociación</a></li>
             <div class="d-flex container_linea">
                 <div class="d-flex lineaxd"></div>
             </div>
-            <li class="list-group-item"><a href="#">Descárgalo</a></li>
+            <li class="list-group-item uwu"><a href="#ya-no-se-que-ponerxd">Descárgalo</a></li>
         </ul>
-    </div>
+    </nav>
     <!--Primera info-->
 
     <div class="d-flex recuadro-celeste">
@@ -142,7 +144,7 @@
     </div>
 
     <!--Footer-->
-    <footer class="footer d-flex flex-column">
+    <footer class="footer d-flex flex-column ya-no-se-que-ponerxd">
         <div class="footer-info d-flex">
             <div class="footer-item contactenos">
                 <h5>Contáctanos</h5>
@@ -189,5 +191,6 @@
 
     gtag('config', 'G-P4ZZSYVTGW');
     </script>
+    <script src="./scripts/responsive-bar.js"></script>
 </body>
 </html>
